# msft-copilot-integration

./: .gitignore  CLAUDE.md  PARTNER_DATA_COLLECTION_GUIDE.md  PARTNER_DATA_WORKFLOW.md  PARTNER_PG_SUMMARY.md  README.md  START_HERE.md
copilot-insights-bridge/: .env.bridge.example  .env.example  .gitignore  CLAUDE.md  CURRENT_STATUS.md  DATA_SCHEMA.md  Dockerfile  PLAN.md  README.md  SESSION_LOG.md  pyproject.toml
copilot-insights-bridge/scripts/: diagnose_gaps.py  export_to_arize.py  import_to_arize.py  process_partner_data.py
copilot-insights-bridge/src/: config.py  health.py  logging_config.py  main.py
copilot-insights-bridge/src/export/: otel_exporter.py  span_builder.py
copilot-insights-bridge/src/extraction/: client.py  loader.py  models.py  queries.py
copilot-insights-bridge/src/reconstruction/: __init__.py  span_models.py  tree_builder.py
copilot-insights-bridge/src/state/: cursor.py
copilot-insights-bridge/src/transformation/: mapper.py
copilot-insights-bridge/tests/: conftest.py  test_buffer.py  test_cursor.py  test_end_to_end.py  test_export.py  test_extraction.py  test_health.py  test_import.py  test_logging_config.py  test_reconstruction.py  test_resilience.py  test_transformation.py
copilot-insights-bridge/tests/fixtures/: error_conversation.json  generative_answers.json  multi_topic_conversation.json  real_data_dump.json  single_conversation.json
data/: README.md
docs/: README.md  SESSION_LOG.md  arize-integration-research.md
examples/: README.md
partner_data/: README.md  TRACKING.md
partner_data_guides/: README.md  (+2 more)
(+24 files in other folders)
